--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -119,7 +119,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawablePadding="20dp"
-                    android:drawableLeft="@drawable/outline_privacy_tip_24"
+                    android:drawableLeft="@drawable/terms_and_conditions"
                     android:gravity="center_vertical"
                     android:fontFamily="@font/milliard_book"
                     android:padding="15dp"
@@ -142,7 +142,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/milliard_book"
                     android:padding="15dp"
-                    android:drawableLeft="@drawable/outline_health_and_safety_24"
+                    android:drawableLeft="@drawable/privacy_policy"
                     android:gravity="center_vertical"
                     android:drawablePadding="20dp"
                     android:text="Privacy Policy"
@@ -160,7 +160,7 @@
 
                 <TextView
                     android:id="@+id/tvReport"
-                    android:drawableLeft="@drawable/outline_report_problem_24"
+                    android:drawableLeft="@drawable/report"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawablePadding="20dp"
@@ -187,7 +187,7 @@
                     android:fontFamily="@font/milliard_book"
                     android:padding="15dp"
                     android:text="Feedback"
-                    android:drawableLeft="@drawable/baseline_rate_review_24"
+                    android:drawableLeft="@drawable/feedback"
                     android:gravity="center_vertical"
                     android:drawablePadding="20dp"
                     android:textColor="#2d3e50"
@@ -209,7 +209,7 @@
                     android:fontFamily="@font/milliard_book"
                     android:padding="15dp"
                     android:text="Share"
-                    android:drawableLeft="@drawable/outline_share_24"
+                    android:drawableLeft="@drawable/share"
                     android:gravity="center_vertical"
                     android:drawablePadding="20dp"
                     android:textColor="#2d3e50"
@@ -231,7 +231,7 @@
                     android:fontFamily="@font/milliard_book"
                     android:padding="15dp"
                     android:text="Rate"
-                    android:drawableLeft="@drawable/outline_star_outline_24"
+                    android:drawableLeft="@drawable/rate_us"
                     android:gravity="center_vertical"
                     android:drawablePadding="20dp"
                     android:textColor="#2d3e50"
@@ -251,7 +251,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/milliard_book"
-                    android:drawableLeft="@drawable/baseline_new_releases_24"
+                    android:drawableLeft="@drawable/version"
                     android:gravity="center_vertical"
                     android:drawablePadding="20dp"
                     android:padding="15dp"
@@ -276,7 +276,7 @@
                     android:padding="15dp"
                     android:drawablePadding="20dp"
                     android:gravity="center_vertical"
-                    android:drawableLeft="@drawable/outline_info_24"
+                    android:drawableLeft="@drawable/about_us"
                     android:text="About Us"
                     android:textColor="#2d3e50"
                     app:layout_constraintTop_toBottomOf="@id/vVersion" />
