--- a/app/src/main/res/menu/home_activity_bnv.xml
+++ b/app/src/main/res/menu/home_activity_bnv.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/miHome"
-        android:icon="@drawable/ic_baseline_home_24"
+        android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
         android:id="@+id/miChapters"
-        android:icon="@drawable/ic_baseline_text_snippet_24"
+        android:icon="@drawable/ic_chapters"
         android:title="Chapters" />
     <item
         android:id="@+id/miExamples"
         android:title="Examples"
-        android:icon="@drawable/ic_baseline_code_24"/>
+        android:icon="@drawable/ic_code"/>
     <item
         android:id="@+id/miFavourites"
-        android:icon="@drawable/ic_baseline_favorite_24"
+        android:icon="@drawable/ic_heart"
         android:title="Favourites" />
 </menu>
