--- a/app/src/main/res/drawable/ic_back.xml
+++ b/app/src/main/res/drawable/ic_back.xml
@@ -5,21 +5,14 @@
     android:viewportHeight="24">
   <path
       android:strokeWidth="1"
-      android:pathData="M12,9.4286m-4.2857,0a4.2857,4.2857 0,1 1,8.5714 0a4.2857,4.2857 0,1 1,-8.5714 0"
+      android:pathData="M23.1429,12L0.8571,12"
       android:strokeLineJoin="round"
       android:fillColor="#00000000"
       android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
       android:strokeWidth="1"
-      android:pathData="M4.68,20.4a8.5714,8.5714 0,0 1,14.64 0"
-      android:strokeLineJoin="round"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
-  <path
-      android:strokeWidth="1"
-      android:pathData="M12,12m-11.1429,0a11.1429,11.1429 0,1 1,22.2857 0a11.1429,11.1429 0,1 1,-22.2857 0"
+      android:pathData="M6.8571,6l-6,6l6,6"
       android:strokeLineJoin="round"
       android:fillColor="#00000000"
       android:strokeColor="#000000"
