--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+                app:navigationIcon="@drawable/ic_back"
                 app:title="Profile"
                 app:titleTextAppearance="@style/title_default" />
         </com.google.android.material.appbar.AppBarLayout>
@@ -118,6 +118,7 @@
                     android:id="@+id/tvTermsConditions"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingStart="20dp"
                     android:drawablePadding="20dp"
                     android:drawableLeft="@drawable/terms_and_conditions"
                     android:gravity="center_vertical"
@@ -145,6 +146,7 @@
                     android:drawableLeft="@drawable/privacy_policy"
                     android:gravity="center_vertical"
                     android:drawablePadding="20dp"
+                    android:paddingStart="20dp"
                     android:text="Privacy Policy"
                     android:textColor="#2d3e50"
                     app:layout_constraintTop_toBottomOf="@id/vTerms" />
@@ -164,6 +166,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawablePadding="20dp"
+                    android:paddingStart="20dp"
                     android:gravity="center_vertical"
                     android:fontFamily="@font/milliard_book"
                     android:padding="15dp"
@@ -187,6 +190,7 @@
                     android:fontFamily="@font/milliard_book"
                     android:padding="15dp"
                     android:text="Feedback"
+                    android:paddingStart="20dp"
                     android:drawableLeft="@drawable/feedback"
                     android:gravity="center_vertical"
                     android:drawablePadding="20dp"
@@ -208,6 +212,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/milliard_book"
                     android:padding="15dp"
+                    android:paddingStart="20dp"
                     android:text="Share"
                     android:drawableLeft="@drawable/share"
                     android:gravity="center_vertical"
@@ -231,6 +236,7 @@
                     android:fontFamily="@font/milliard_book"
                     android:padding="15dp"
                     android:text="Rate"
+                    android:paddingStart="20dp"
                     android:drawableLeft="@drawable/rate_us"
                     android:gravity="center_vertical"
                     android:drawablePadding="20dp"
@@ -254,6 +260,7 @@
                     android:drawableLeft="@drawable/version"
                     android:gravity="center_vertical"
                     android:drawablePadding="20dp"
+                    android:paddingStart="20dp"
                     android:padding="15dp"
                     android:text="Version"
                     android:textColor="#2d3e50"
@@ -275,6 +282,7 @@
                     android:fontFamily="@font/milliard_book"
                     android:padding="15dp"
                     android:drawablePadding="20dp"
+                    android:paddingStart="20dp"
                     android:gravity="center_vertical"
                     android:drawableLeft="@drawable/about_us"
                     android:text="About Us"
