--- a/app/src/main/res/values/title_cpp.xml
+++ b/app/src/main/res/values/title_cpp.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="cpp_title">
-        <item name="android:fontFamily">@font/origin_tech</item>
-        <item name="android:textSize">30sp</item>
+        <item name="android:fontFamily">@font/milliard_book</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#007DF9</item>
     </style>
     <style name="tab_text">
         <item name="android:fontFamily">@font/milliard_semibold</item>
