--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
-                android:fontFamily="@font/milliard_semibold"
+                android:fontFamily="@font/metropolis_semi_bold"
                 android:hint="Chapter Title"
                 android:textColor="#2d3e50"
                 android:textSize="32sp"
@@ -39,7 +39,7 @@
                 android:layout_margin="25dp"
                 android:justificationMode="inter_word"
                 android:layout_marginTop="35dp"
-                android:fontFamily="@font/milliard_book"
+                android:fontFamily="@font/metropolis_regular"
                 android:hint="Chapter Text is loading."
                 android:lineSpacingExtra="12dp"
                 android:textColor="@color/grey_text"
@@ -79,7 +79,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:justificationMode="inter_word"
-                android:fontFamily="@font/milliard_book"
+                android:fontFamily="@font/metropolis_regular"
                 android:lineSpacingExtra="12dp"
                 android:textColor="@color/grey_text"
                 android:textSize="20sp"
@@ -136,7 +136,7 @@
                 android:layout_height="40dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/button_background"
-                android:fontFamily="@font/milliard_book"
+                android:fontFamily="@font/metropolis_regular"
                 android:text="Next"
                 android:textAllCaps="false"
                 android:textColor="@color/primaryColor"
