--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -33,7 +33,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/white_corner_background"
-        android:fontFamily="@font/milliard_book"
+        android:fontFamily="@font/metropolis_regular"
         android:gravity="top|left"
         android:hint="You can Report Something Wrong.\n\nWe will surely solve that as early as possible.\n\nIf you have made your mind to go,\nplease let us know why are you leaving."
         android:lines="10"
@@ -48,7 +48,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/button_background_filled"
-        android:fontFamily="@font/milliard_book"
+        android:fontFamily="@font/metropolis_regular"
         android:minHeight="40dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
@@ -66,7 +66,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginLeft="20dp"
         android:background="@drawable/button_background"
-        android:fontFamily="@font/milliard_book"
+        android:fontFamily="@font/metropolis_regular"
         android:minHeight="40dp"
         android:text="Report"
         android:textAllCaps="false"
