--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -38,7 +38,7 @@
                 android:layout_marginTop="65dp"
                 android:layout_marginRight="20dp"
                 android:drawablePadding="10dp"
-                android:fontFamily="@font/milliard_semibold"
+                android:fontFamily="@font/metropolis_semi_bold"
                 android:gravity="center_vertical"
                 android:text="Small and Precise Chapters"
                 android:textSize="25sp"
@@ -54,7 +54,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
                 android:drawablePadding="10dp"
-                android:fontFamily="@font/milliard_semibold"
+                android:fontFamily="@font/metropolis_semi_bold"
                 android:gravity="center_vertical"
                 android:text="Practice Examples"
                 android:textSize="25sp"
@@ -70,7 +70,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
                 android:drawablePadding="10dp"
-                android:fontFamily="@font/milliard_semibold"
+                android:fontFamily="@font/metropolis_semi_bold"
                 android:gravity="center_vertical"
                 android:text="Mark your Favourites"
                 android:textSize="25sp"
@@ -86,7 +86,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
                 android:drawablePadding="10dp"
-                android:fontFamily="@font/milliard_semibold"
+                android:fontFamily="@font/metropolis_semi_bold"
                 android:gravity="center_vertical"
                 android:text="Ad Free"
                 android:textSize="25sp"
@@ -102,7 +102,7 @@
                 android:textColor="#2d3e50"
                 android:layout_marginRight="20dp"
                 android:drawablePadding="10dp"
-                android:fontFamily="@font/milliard_semibold"
+                android:fontFamily="@font/metropolis_semi_bold"
                 android:gravity="center_vertical"
                 android:text="Frequent Content Update"
                 android:textSize="25sp"
@@ -178,7 +178,7 @@
                         android:gravity="center"
                         android:letterSpacing="0.02"
                         android:text="Continue with Google"
-                        android:fontFamily="@font/milliard_book"
+                        android:fontFamily="@font/metropolis_regular"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -196,7 +196,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="30dp"
-                android:fontFamily="@font/milliard_book"
+                android:fontFamily="@font/metropolis_regular"
                 android:layout_marginRight="25dp"
                 android:layout_marginBottom="30dp"
                 android:lineSpacingExtra="5dp"
