--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,7 +47,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="50dp"
                         android:layout_marginBottom="5dp"
-                        android:fontFamily="@font/milliard_semibold"
+                        android:fontFamily="@font/metropolis_semi_bold"
                         android:gravity="center"
                         android:text="Continue from where you left off"
                         android:textColor="#2d3e50"
@@ -72,7 +72,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:fontFamily="@font/milliard_book"
+                        android:fontFamily="@font/metropolis_regular"
                         android:gravity="center"
                         android:text="Your Current Chapter"
                         android:textColor="@color/primaryColor"
@@ -93,7 +93,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="@drawable/feedback_background"
-                            android:fontFamily="@font/milliard_semibold"
+                            android:fontFamily="@font/metropolis_semi_bold"
                             android:gravity="center"
                             android:text="Loading Chapters . . ." />
 
@@ -118,7 +118,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:fontFamily="@font/milliard_book"
+                        android:fontFamily="@font/metropolis_regular"
                         android:gravity="center"
                         android:text="Your Current Example"
                         android:textColor="@color/primaryColor"
@@ -137,7 +137,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="@drawable/feedback_background"
-                            android:fontFamily="@font/milliard_semibold"
+                            android:fontFamily="@font/metropolis_semi_bold"
                             android:gravity="center"
                             android:text="Loading Examples . . ." />
 
@@ -209,7 +209,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
-                    android:fontFamily="@font/milliard_semibold"
+                    android:fontFamily="@font/metropolis_semi_bold"
                     android:text="Test Your Learning"
                     android:textColor="#2d3e50"
                     android:textSize="20sp"
@@ -222,7 +222,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginBottom="5dp"
-                    android:fontFamily="@font/milliard_book"
+                    android:fontFamily="@font/metropolis_regular"
                     android:gravity="center_vertical"
                     android:text="Try a random example"
                     app:layout_constraintLeft_toRightOf="@+id/ivslash"
@@ -233,7 +233,7 @@
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:background="@drawable/button_background"
-                    android:fontFamily="@font/milliard_semibold"
+                    android:fontFamily="@font/metropolis_semi_bold"
                     android:text="See Example"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:layout_marginTop="15dp"
