--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
-                android:fontFamily="@font/milliard_semibold"
+                android:fontFamily="@font/metropolis_semi_bold"
                 android:hint="Example Title"
                 android:textColor="#2d3e50"
                 android:textSize="32sp"
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
                 android:justificationMode="inter_word"
-                android:fontFamily="@font/milliard_book"
+                android:fontFamily="@font/metropolis_regular"
                 android:lineSpacingExtra="12dp"
                 android:hint="Example text is loading."
                 android:textColor="@color/grey_text"
@@ -78,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
                 android:justificationMode="inter_word"
-                android:fontFamily="@font/milliard_book"
+                android:fontFamily="@font/metropolis_regular"
                 android:lineSpacingExtra="12dp"
                 android:textColor="@color/grey_text"
                 android:textSize="20sp"
@@ -138,7 +138,7 @@
                 android:layout_height="40dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/button_background"
-                android:fontFamily="@font/milliard_book"
+                android:fontFamily="@font/metropolis_regular"
                 android:text="Next"
                 android:textAllCaps="false"
                 android:textColor="@color/primaryColor"
