--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -64,7 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
-                    android:fontFamily="@font/milliard_semibold"
+                    android:fontFamily="@font/metropolis_semi_bold"
                     android:text="Name"
                     android:layout_marginRight="15dp"
                     android:textColor="#2d3e50"
@@ -79,7 +79,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginBottom="20dp"
-                    android:fontFamily="@font/milliard_book"
+                    android:fontFamily="@font/metropolis_regular"
                     android:hint="Email"
                     android:textSize="16sp"
                     android:textStyle="italic"
@@ -97,7 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
-            android:fontFamily="@font/milliard_semibold"
+            android:fontFamily="@font/metropolis_semi_bold"
             android:text="About"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/clUserDetails" />
@@ -122,7 +122,7 @@
                     android:drawablePadding="20dp"
                     android:drawableLeft="@drawable/terms_and_conditions"
                     android:gravity="center_vertical"
-                    android:fontFamily="@font/milliard_book"
+                    android:fontFamily="@font/metropolis_regular"
                     android:padding="15dp"
                     android:text="Terms and Conditions"
                     android:textColor="#2d3e50"
@@ -141,7 +141,7 @@
                     android:id="@+id/tvPrivacyPolicy"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/milliard_book"
+                    android:fontFamily="@font/metropolis_regular"
                     android:padding="15dp"
                     android:drawableLeft="@drawable/privacy_policy"
                     android:gravity="center_vertical"
@@ -168,7 +168,7 @@
                     android:drawablePadding="20dp"
                     android:paddingStart="20dp"
                     android:gravity="center_vertical"
-                    android:fontFamily="@font/milliard_book"
+                    android:fontFamily="@font/metropolis_regular"
                     android:padding="15dp"
                     android:text="Report"
                     android:textColor="#2d3e50"
@@ -187,7 +187,7 @@
                     android:id="@+id/tvFeedback"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/milliard_book"
+                    android:fontFamily="@font/metropolis_regular"
                     android:padding="15dp"
                     android:text="Feedback"
                     android:paddingStart="20dp"
@@ -210,7 +210,7 @@
                     android:id="@+id/tvShare"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/milliard_book"
+                    android:fontFamily="@font/metropolis_regular"
                     android:padding="15dp"
                     android:paddingStart="20dp"
                     android:text="Share"
@@ -233,7 +233,7 @@
                     android:id="@+id/tvRateUs"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/milliard_book"
+                    android:fontFamily="@font/metropolis_regular"
                     android:padding="15dp"
                     android:text="Rate"
                     android:paddingStart="20dp"
@@ -256,7 +256,7 @@
                     android:id="@+id/tvVersion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/milliard_book"
+                    android:fontFamily="@font/metropolis_regular"
                     android:drawableLeft="@drawable/version"
                     android:gravity="center_vertical"
                     android:drawablePadding="20dp"
@@ -279,7 +279,7 @@
                     android:id="@+id/tvAboutUs"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/milliard_book"
+                    android:fontFamily="@font/metropolis_regular"
                     android:padding="15dp"
                     android:drawablePadding="20dp"
                     android:paddingStart="20dp"
@@ -298,7 +298,7 @@
             android:layout_margin="25dp"
             android:drawableRight="@drawable/ic_love"
             android:drawablePadding="8dp"
-            android:fontFamily="@font/milliard_book"
+            android:fontFamily="@font/metropolis_regular"
             android:gravity="center"
             android:text="With"
             android:textSize="20sp"
@@ -311,7 +311,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:fontFamily="@font/milliard_book"
+            android:fontFamily="@font/metropolis_regular"
             android:gravity="center"
             android:text="from"
             android:textSize="16sp"
