--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -30,7 +30,7 @@
         android:layout_margin="20dp"
         android:textColor="@color/primaryColor"
         android:textAllCaps="false"
-        android:fontFamily="@font/milliard_book"
+        android:fontFamily="@font/metropolis_regular"
         android:background="@drawable/button_background"
         app:layout_constraintTop_toBottomOf="@id/ablUpdateProfileScreenAppBar"
         android:text="Log Out"/>
@@ -38,7 +38,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/bToDeleteAccount"
         android:textSize="16sp"
-        android:fontFamily="@font/milliard_book"
+        android:fontFamily="@font/metropolis_regular"
         android:textColor="@color/primaryColor"
         android:layout_width="match_parent"
         android:textAlignment="center"
