Delete button chaged.

--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -39,10 +39,10 @@
         android:id="@+id/bToDeleteAccount"
         android:textSize="16sp"
         android:fontFamily="@font/metropolis_regular"
-        android:textColor="@color/primaryColor"
+        android:textColor="@color/pure_red"
         android:layout_width="match_parent"
         android:textAlignment="center"
-        android:background="@drawable/button_background"
+        android:background="@drawable/alert_background"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:textAllCaps="false"
