--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -47,14 +47,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/button_background_filled"
+        android:background="@drawable/alert_background"
         android:fontFamily="@font/metropolis_regular"
         android:minHeight="40dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="Delete Account"
         android:textAllCaps="false"
-        android:textColor="@color/white"
+        android:textColor="@color/pure_red"
         android:textSize="16sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDeleteReason" />
