--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primaryColor">#0757f3</color>
-    <color name="primaryColorLightened50">#86d6ff</color>
+    <color name="primaryColorLightVariant">#e3ecfd</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="teal_200">#00FFFF</color>
+    <color name="teal_700">#00FFFF</color>
     <color name="icon_inactive">#676667</color>
     <color name="major_background">#F5F5F5</color>
     <color name="chapter_text">#63658c</color>
