Progress bar for examples added.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,21 +16,39 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clProgressContainer"
             android:layout_width="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
 
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/pbChaptersProgress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_margin="25dp"
+                app:layout_constraintTop_toTopOf="parent"
                 android:indeterminate="true"
-                app:trackCornerRadius="4dp"
-                />
+                app:indicatorSize="80dp"
+                app:layout_constraintEnd_toStartOf="@+id/pbExamplesProgress"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:trackColor="@color/primaryColorLightVariant"
+                app:trackCornerRadius="3dp"
+                app:trackThickness="6dp" />
 
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:id="@+id/pbExamplesProgress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="25dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:indeterminate="true"
+                app:indicatorSize="80dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/pbChaptersProgress"
+                app:trackColor="@color/primaryColorLightVariant"
+                app:trackCornerRadius="3dp"
+                app:trackThickness="6dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
