--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,6 +15,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clProgressContainer"
+            android:layout_marginTop="25dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
@@ -27,7 +28,7 @@
                 android:layout_margin="25dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:indeterminate="true"
-                app:indicatorSize="80dp"
+                app:indicatorSize="100dp"
                 app:layout_constraintEnd_toStartOf="@+id/pbExamplesProgress"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +43,7 @@
                 android:layout_margin="25dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:indeterminate="true"
-                app:indicatorSize="80dp"
+                app:indicatorSize="100dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/pbChaptersProgress"
