--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,86 +15,110 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clProgressContainer"
-            android:layout_marginTop="25dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/tvCompletedChapters"
                 android:layout_width="wrap_content"
-                android:textSize="20sp"
-                android:fontFamily="@font/metropolis_semi_bold"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/metropolis_semi_bold"
                 android:text="Loading"
-                app:layout_constraintRight_toRightOf="@id/pbChaptersProgress"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@id/pbChaptersProgress"
                 app:layout_constraintLeft_toLeftOf="@id/pbChaptersProgress"
-                app:layout_constraintTop_toTopOf="@id/pbChaptersProgress"
-                app:layout_constraintBottom_toBottomOf="@id/pbChaptersProgress"/>
+                app:layout_constraintRight_toRightOf="@id/pbChaptersProgress"
+                app:layout_constraintTop_toTopOf="@id/pbChaptersProgress" />
 
             <TextView
                 android:id="@+id/tvTotalChapters"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/metropolis_regular"
-                app:layout_constraintTop_toBottomOf="@id/tvCompletedChapters"
                 android:gravity="center"
                 app:layout_constraintLeft_toLeftOf="@id/pbChaptersProgress"
-                app:layout_constraintRight_toRightOf="@id/pbChaptersProgress"/>
+                app:layout_constraintRight_toRightOf="@id/pbChaptersProgress"
+                app:layout_constraintTop_toBottomOf="@id/tvCompletedChapters" />
 
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/pbChaptersProgress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_margin="25dp"
-                app:layout_constraintTop_toTopOf="parent"
                 android:indeterminate="true"
                 app:indicatorSize="120dp"
                 app:layout_constraintEnd_toStartOf="@+id/pbExamplesProgress"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:trackColor="@color/primaryColorLightVariant"
                 app:trackCornerRadius="3dp"
                 app:trackThickness="6dp" />
 
+
             <TextView
                 android:id="@+id/tvCompletedExamples"
                 android:layout_width="wrap_content"
-                android:textSize="20sp"
-                android:fontFamily="@font/metropolis_semi_bold"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/metropolis_semi_bold"
                 android:text="Loading"
-                app:layout_constraintRight_toRightOf="@id/pbExamplesProgress"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@id/pbExamplesProgress"
                 app:layout_constraintLeft_toLeftOf="@id/pbExamplesProgress"
-                app:layout_constraintTop_toTopOf="@id/pbExamplesProgress"
-                app:layout_constraintBottom_toBottomOf="@id/pbExamplesProgress"/>
+                app:layout_constraintRight_toRightOf="@id/pbExamplesProgress"
+                app:layout_constraintTop_toTopOf="@id/pbExamplesProgress" />
+
             <TextView
                 android:id="@+id/tvTotalExamples"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/metropolis_regular"
                 android:gravity="center"
-                app:layout_constraintTop_toBottomOf="@id/tvCompletedExamples"
                 app:layout_constraintLeft_toLeftOf="@id/pbExamplesProgress"
-                app:layout_constraintRight_toRightOf="@+id/pbExamplesProgress"/>
+                app:layout_constraintRight_toRightOf="@+id/pbExamplesProgress"
+                app:layout_constraintTop_toBottomOf="@id/tvCompletedExamples" />
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/pbExamplesProgress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
-                app:layout_constraintTop_toTopOf="parent"
                 android:indeterminate="true"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:indicatorSize="120dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/pbChaptersProgress"
+                app:layout_constraintTop_toTopOf="parent"
                 app:trackColor="@color/primaryColorLightVariant"
                 app:trackCornerRadius="3dp"
                 app:trackThickness="6dp" />
+
+            <TextView
+                android:id="@+id/tvChaptersCompletedTitle"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/metropolis_semi_bold"
+                android:text="Chpaters\nCompleted"
+                app:layout_constraintLeft_toLeftOf="@id/pbChaptersProgress"
+                app:layout_constraintRight_toRightOf="@id/pbChaptersProgress"
+                app:layout_constraintTop_toBottomOf="@id/pbChaptersProgress" />
+
+            <TextView
+                android:id="@+id/tvExamplesCompletedTitle"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:fontFamily="@font/metropolis_semi_bold"
+                app:layout_constraintLeft_toLeftOf="@id/pbExamplesProgress"
+                app:layout_constraintRight_toRightOf="@id/pbExamplesProgress"
+                android:layout_height="wrap_content"
+                android:text="Examples\nCompleted"
+                app:layout_constraintTop_toBottomOf="@id/pbExamplesProgress" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -268,6 +292,7 @@
             android:layout_margin="25dp"
             app:cardElevation="0dp"
             app:cardCornerRadius="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/clContainer">
