--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -102,6 +102,7 @@
                 android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:layout_height="wrap_content"
+                android:textColor="#2d3e50"
                 android:fontFamily="@font/metropolis_semi_bold"
                 android:text="Chpaters\nCompleted"
                 app:layout_constraintLeft_toLeftOf="@id/pbChaptersProgress"
@@ -112,6 +113,7 @@
                 android:id="@+id/tvExamplesCompletedTitle"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
+                android:textColor="#2d3e50"
                 android:layout_width="wrap_content"
                 android:fontFamily="@font/metropolis_semi_bold"
                 app:layout_constraintLeft_toLeftOf="@id/pbExamplesProgress"
@@ -122,40 +124,20 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/clProgressContainer">
-
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cvChapterCard"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                app:cardElevation="0dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginBottom="20dp"
-                android:elevation="0dp"
-                android:outlineAmbientShadowColor="@color/primaryColor"
-                app:cardCornerRadius="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/clContainer">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/clBookmarkContainer"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_margin="25dp"
+                    android:background="@drawable/white_background"
+                    app:layout_constraintTop_toBottomOf="@id/clProgressContainer"
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/tvPickUp"
+                        android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="50dp"
                         android:layout_marginBottom="5dp"
                         android:fontFamily="@font/metropolis_semi_bold"
                         android:gravity="center"
@@ -257,33 +239,19 @@
                             android:layout_height="match_parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
 
 
-
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cvRandomExample"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="25dp"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/clContainer">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:padding="10dp"
+                android:layout_margin="25dp"
+                android:background="@drawable/white_background"
+                app:layout_constraintTop_toBottomOf="@id/clBookmarkContainer"
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/ivslash"
+                    android:id="@+id/ivSlash"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:gravity="center"
@@ -304,7 +272,7 @@
                     android:text="Test Your Learning"
                     android:textColor="#2d3e50"
                     android:textSize="20sp"
-                    app:layout_constraintLeft_toRightOf="@+id/ivslash"
+                    app:layout_constraintLeft_toRightOf="@+id/ivSlash"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
@@ -316,7 +284,7 @@
                     android:fontFamily="@font/metropolis_regular"
                     android:gravity="center_vertical"
                     android:text="Try a random example"
-                    app:layout_constraintLeft_toRightOf="@+id/ivslash"
+                    app:layout_constraintLeft_toRightOf="@+id/ivSlash"
                     app:layout_constraintTop_toBottomOf="@+id/tvTestYourLearning" />
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -336,7 +304,7 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
