Bottom navigation view font changed.

--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -112,6 +112,7 @@
                 android:layout_height="60dp"
                 android:layout_marginLeft="25dp"
                 android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:contentDescription="Share"
                 android:padding="18dp"
                 android:src="@drawable/ic_outline_share_24"
@@ -127,6 +128,7 @@
                 android:clickable="true"
                 android:contentDescription="Favourite"
                 android:padding="18dp"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:src="@drawable/ic_baseline_favorite_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/ivShare"
@@ -137,6 +139,7 @@
                 android:layout_height="60dp"
                 android:layout_marginLeft="25dp"
                 android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:contentDescription="Mark as done"
                 android:padding="18dp"
                 android:src="@drawable/ic_baseline_check_24"
