--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -109,6 +109,7 @@
                 android:layout_height="60dp"
                 android:layout_marginLeft="25dp"
                 android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:contentDescription="Share"
                 android:padding="18dp"
                 android:src="@drawable/ic_outline_share_24"
@@ -124,6 +125,7 @@
                 android:layout_marginLeft="25dp"
                 android:clickable="true"
                 android:contentDescription="Favourite"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:padding="18dp"
                 android:src="@drawable/ic_baseline_favorite_24"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -138,6 +140,7 @@
                 android:clickable="true"
                 android:contentDescription="Mark as done"
                 android:padding="18dp"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:src="@drawable/ic_baseline_check_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/ivFavourite"
