--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -135,7 +135,7 @@
 
                     <TextView
                         android:id="@+id/tvPickUp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="15dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
@@ -153,7 +153,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="15dp"
                         android:layout_marginRight="10dp"
                         android:background="@color/grey_text_background"
                         app:layout_constraintTop_toBottomOf="@+id/tvPickUp" />
@@ -250,16 +250,20 @@
                 app:layout_constraintTop_toBottomOf="@id/clBookmarkContainer"
                 android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/ivSlash"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
+                <TextView
+                    android:id="@+id/tvCurlyBraces"
+                    android:layout_width="wrap_content"
                     android:gravity="center"
+                    android:textColor="@color/primaryColor"
                     android:layout_marginLeft="10dp"
-                    android:src="@drawable/ic_code_example"
-                    app:layout_constraintBottom_toTopOf="@id/bToRandomExample"
+                    android:textSize="38sp"
+                    android:fontFamily="@font/metropolis_semi_bold"
+                    android:layout_height="wrap_content"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="{ }"/>
+
+
 
                 <TextView
                     android:id="@+id/tvTestYourLearning"
@@ -268,11 +272,11 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    app:layout_constraintLeft_toRightOf="@id/tvCurlyBraces"
                     android:fontFamily="@font/metropolis_semi_bold"
                     android:text="Test Your Learning"
                     android:textColor="#2d3e50"
                     android:textSize="20sp"
-                    app:layout_constraintLeft_toRightOf="@+id/ivSlash"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
@@ -280,11 +284,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
+                    app:layout_constraintLeft_toRightOf="@id/tvCurlyBraces"
                     android:layout_marginBottom="5dp"
                     android:fontFamily="@font/metropolis_regular"
                     android:gravity="center_vertical"
                     android:text="Try a random example"
-                    app:layout_constraintLeft_toRightOf="@+id/ivSlash"
                     app:layout_constraintTop_toBottomOf="@+id/tvTestYourLearning" />
 
                 <androidx.appcompat.widget.AppCompatButton
