--- a/app/src/main/res/layout/fragment_favourite_chapters.xml
+++ b/app/src/main/res/layout/fragment_favourite_chapters.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pure_red"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FavouriteChaptersFragment">
 
@@ -14,13 +13,24 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/ic_edpub"
+        android:src="@drawable/ic_empty_folder"
         app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+        android:id="@+id/tvEmptyListMessage"
+        android:layout_width="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="20sp"
+        android:fontFamily="@font/metropolis_semi_bold"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivEmptyList"
+        android:layout_height="wrap_content"
+        android:text="Favourite Chapters List is Empty."/>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:layout_width="wrap_content"
         android:id="@+id/pbFavouriteChapters"
         app:layout_constraintTop_toTopOf="parent"
+        app:trackCornerRadius="2dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:indicatorColor="@color/primaryColor"
         android:indeterminate="true"
