--- a/app/src/main/res/layout/fragment_favourite_chapters.xml
+++ b/app/src/main/res/layout/fragment_favourite_chapters.xml
@@ -10,6 +10,7 @@
         android:id="@+id/ivEmptyList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -20,6 +21,7 @@
         android:layout_width="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textSize="20sp"
+        android:visibility="gone"
         android:fontFamily="@font/metropolis_semi_bold"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivEmptyList"
@@ -40,6 +42,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvFavouriteChapters"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
