Progress bar added to Chapters and Examples.

--- a/app/src/main/res/layout/fragment_examples.xml
+++ b/app/src/main/res/layout/fragment_examples.xml
@@ -2,9 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f2f6f7"
     android:layout_height="match_parent"
     tools:context=".ExamplesFragment">
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbExamplesProgress"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:indicatorColor="@color/primaryColor"
+        app:trackCornerRadius="2dp"
+        android:indeterminate="true"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvExamples"
