--- a/app/src/main/res/layout/fragment_favourite_examples.xml
+++ b/app/src/main/res/layout/fragment_favourite_examples.xml
@@ -27,7 +27,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivEmptyList"
         android:layout_height="wrap_content"
-        android:text="Favourite Examples List is Empty."/>
+        android:text="Favourite examples list is empty."/>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:layout_width="wrap_content"
